--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
-hello
+<html>
+    <head>
+    
+    </head>
+    <body>
+        <h1>
+            hello
+        </h1>
+        <p>
+            <u>HELLO GUYS!!!</u> welcome to my website
+            <strong>please rate highly and leave a like</strong>
+            also visit my <a href="https://sayhell0.itch.io/ship-of-theseus"> <U>itch.io page!!</U></a>
+        </p>
+        <img
+            src="steamhappy.jpg"
+            alt ="happy_guy"
+            width="400"
+            >
+    </body>
+</html>
