Update index.html to be sexy

--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <html>
     <head>
-    
+    <title>my EPIC WEBSITE!!</title>
+    <style>
+    * {
+    color: green;
+    background-color: black
+    }
+    </style>
     </head>
     <body>
         <h1>
