--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <p>
             <u>HELLO GUYS!!!</u> welcome to my website
             <strong>please rate highly and leave a like</strong>
-            also visit my <a href="https://sayhell0.itch.io/ship-of-theseus"> <U>itch.io page!!</U></a>
+            also visit my <a href="https://alex1sn.itch.io"> <U>itch.io page!!</U></a>
         </p>
         <img
             src="steamhappy.jpg"
