--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     <title>my EPIC WEBSITE!!</title>
     <style>
     * {
-    color: green;
-    background-color: black
+    background-color: rgb(41, 52, 70);
+    color: rgb(202, 204, 193)
     }
     </style>
     </head>
