--- a/index.html
+++ b/index.html
@@ -22,5 +22,7 @@
             alt ="happy_guy"
             width="400"
             >
+        <a>href"https://alex1sn.itch.io"<button>Go to next stop</button></a>
+        
     </body>
 </html>
