--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             alt ="happy_guy"
             width="400"
             >
-        <a>href"https://alex1sn.itch.io"<button>Go to next stop</button></a>
+        <a href="clicker.html"><button>little game</button></a>
         
     </body>
 </html>
