--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
             hello
         </h1>
         <p>
-            <u>HELLO GUYS!!!</u> welcome to my website
-            <strong>please rate highly and leave a like</strong>
-            also visit my <a href="https://alex1sn.itch.io"> <U>itch.io page!!</U></a>
+            <u>HELLO GUYS!!!</u> welcome to my website \n
+            <strong>please rate highly and leave a like</strong>\n
+            also visit my <a href="https://sayhell0.itch.io/"> <U>itch.io page!!</U></a>
         </p>
         <img
             src="steamhappy.jpg"
