--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
             hello
         </h1>
         <p>
-            <u>HELLO GUYS!!!</u> welcome to my website \n
-            <strong>please rate highly and leave a like</strong>\n
+            <u>HELLO GUYS!!!</u> welcome to my website <br>
+            <strong>please rate highly and leave a like</strong><br>
             also visit my <a href="https://sayhell0.itch.io/"> <U>itch.io page!!</U></a>
         </p>
         <img
