--- a/index.html
+++ b/index.html
@@ -2,6 +2,34 @@
     <head>
     <title>my EPIC WEBSITE!!</title>
     <style>
+    .center {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 50%;
+        height: 300px;
+        border: 4px solid rgba(18, 150, 18, 0.7);
+        margin: 10px;
+    }
+    .title {
+        align-self: center;
+        display: flex;
+        text-align: center;
+        align-items: center;
+        font-size: 30px;
+        justify-content: center;
+        width: 50%;
+        height: 300px;
+        border: 10px solid rgba(82, 96, 187, 0.7);
+        padding: auto;
+    }
+    .image {
+        display: flex;
+        width: auto;
+        height: auto;
+        border: 10px solid rgba(82, 96, 187, 0.7);
+        padding: auto;
+    }
     * {
     background-color: rgb(41, 52, 70);
     color: rgb(202, 204, 193)
@@ -9,20 +37,28 @@
     </style>
     </head>
     <body>
-        <h1>
-            hello
-        </h1>
+        <div class = "title">
+            <h1>
+                <strong>Welcome to my webpage</strong> 
+            </h1>
+        </div>
+        <div class = "center">
+            <p>
+                <u>HELLO GUYS!!!</u> welcome to my website <br>
+                <strong>please rate highly and leave a like</strong><br>
+            </p>
+        </div>
+        <div class = "image">
+            <img
+                src="steamhappy.jpg"
+                alt ="happy_guy"
+                width="400"
+                >
+        </div>
         <p>
-            <u>HELLO GUYS!!!</u> welcome to my website <br>
-            <strong>please rate highly and leave a like</strong><br>
-            also visit my <a href="https://sayhell0.itch.io/"> <U>itch.io page!!</U></a>
+             P.S. also visit my <a href="https://sayhell0.itch.io/"> <U>itch.io page!!</U></a>
         </p>
-        <img
-            src="steamhappy.jpg"
-            alt ="happy_guy"
-            width="400"
-            >
         <a href="clicker.html"><button>little game</button></a>
-        
+
     </body>
 </html>
