--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         align-items: center;
         justify-content: center;
         width: 50%;
-        height: 300px;
+        height: auto;
         border: 4px solid rgba(18, 150, 18, 0.7);
         margin: 10px;
     }
