--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
     }
     .image {
         display: flex;
-        width: auto;
+        width: 400;
         height: auto;
         border: 10px solid rgba(82, 96, 187, 0.7);
-        padding: auto;
+        padding: 10;
     }
     * {
     background-color: rgb(41, 52, 70);
