--- a/index.html
+++ b/index.html
@@ -30,6 +30,11 @@
         border: 10px solid rgba(82, 96, 187, 0.7);
         padding: 10;
     }
+    .PLEASE-CENTER {
+        display: flex;
+        justify-content: center;
+        width: 400px
+    }
     * {
     background-color: rgb(41, 52, 70);
     color: rgb(202, 204, 193)
@@ -37,6 +42,7 @@
     </style>
     </head>
     <body>
+    <div class="PLEASE-CENTER">
         <div class = "title">
             <h1>
                 <strong>Welcome to my webpage</strong> 
@@ -59,6 +65,6 @@
              P.S. also visit my <a href="https://sayhell0.itch.io/"> <U>itch.io page!!</U></a>
         </p>
         <a href="clicker.html"><button>little game</button></a>
-
+    </div>
     </body>
 </html>
