--- a/index.html
+++ b/index.html
@@ -30,10 +30,12 @@
         border: 10px solid rgba(82, 96, 187, 0.7);
         padding: 10;
     }
-    .PLEASE-CENTER {
-        display: flex;
-        justify-content: center;
-        width: 400px
+    .centerall {
+        display: grid;
+        place-items: center;
+        height: auto;
+        border: 4px solid rgba(18, 150, 18, 0.258);
+        margin: 10px;
     }
     * {
     background-color: rgb(41, 52, 70);
@@ -42,7 +44,7 @@
     </style>
     </head>
     <body>
-    <div class="PLEASE-CENTER">
+    <div class="centerall">
         <div class = "title">
             <h1>
                 <strong>Welcome to my webpage</strong> 
