--- a/clicker.html
+++ b/clicker.html
@@ -4,9 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Clicker</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <button>click to make a </button>
+    <div class="button">
+    <button>click to make a doodad</button> <br>
+    </div>
+    <div class="button">
     <a href="index.html"><button>go back</button></a>
+    </div>
+    <p>
+        amount collected =
+    </p>
 </body>
 </html>
