--- a/index.html
+++ b/index.html
@@ -1,47 +1,9 @@
 <html>
     <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>my EPIC WEBSITE!!</title>
-    <style>
-    .center {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        width: 50%;
-        height: auto;
-        border: 10px solid rgba(34, 64, 135, 0.7);
-        margin: 4px;
-    }
-    .title {
-        align-self: center;
-        display: flex;
-        text-align: center;
-        align-items: center;
-        font-size: 30px;
-        justify-content: center;
-        width: 50%;
-        height: 300px;
-        border: 10px solid rgba(82, 96, 187, 0.7);
-        padding: auto;
-    }
-    .image {
-        display: flex;
-        width: 400;
-        height: auto;
-        border: 10px solid rgba(82, 96, 187, 0.7);
-        padding: 10;
-    }
-    .centerall {
-        display: grid;
-        place-items: center;
-        height: auto;
-        border: 4px solid rgba(18, 150, 18, 0.258);
-        margin: 4px;
-    }
-    * {
-    background-color: rgb(41, 52, 70);
-    color: rgb(202, 204, 193)
-    }
-    </style>
+    <link rel="stylesheet" href="style.css">
     </head>
     <body>
     <div class="centerall">
@@ -60,11 +22,13 @@
             <img
                 src="steamhappy.jpg"
                 alt ="happy_guy"
-                width="400"
+                width="100%"
                 >
         </div>
+    </div>
+    <div class="secret">
         <p>
-             P.S. also visit my <a href="https://sayhell0.itch.io/"> <U>itch.io page!!</U></a>
+             P.S. also visit my <a href="https://sayhell0.itch.io/"> <U>itch.io page!!</U></a> and try out my clicker game
         </p>
         <a href="clicker.html"><button>little game</button></a>
     </div>
