new stuff and putting everything in css

--- a/index.html
+++ b/index.html
@@ -12,18 +12,41 @@
                 <strong>Welcome to my webpage</strong> 
             </h1>
         </div>
-        <div class = "center">
-            <p>
-                <u>HELLO GUYS!!!</u> welcome to my website <br>
-                <strong>please rate highly and leave a like</strong><br>
-            </p>
+        <div class = "post">
+            <div class="header">
+                awesome blog post
+            </div>
+            <div class = "text">
+                <p>
+                    <u>HELLO GUYS!!!</u> welcome to my website <br>
+                    <strong>please rate highly and leave a like</strong><br>
+                </p>
+            </div>
+            <div class = "image">
+                <img
+                    src="steamhappy.jpg"
+                    alt ="happy_guy"
+                    width="100%"
+                    >
+            </div>
         </div>
-        <div class = "image">
-            <img
-                src="steamhappy.jpg"
-                alt ="happy_guy"
-                width="100%"
-                >
+
+        <div class = "post">
+            <div class="header">
+                i am testing
+            </div>
+            <div class = "text">
+                <p>
+                    i dont know if i should put all the posts into <br>like a table or just thug it out 
+                </p>
+            </div>
+            <div class = "image">
+                <img
+                    src="bluehappy.jpg"
+                    alt ="happy_guy"
+                    width="100%"
+                    >
+            </div>
         </div>
     </div>
     <div class="secret">
