--- a/index.html
+++ b/index.html
@@ -48,6 +48,23 @@
                     >
             </div>
         </div>
+        <div class = "post">
+            <div class="header">
+                i played a game
+            </div>
+            <div class = "text">
+                <p>
+                    it was oh so epic 
+                </p>
+            </div>
+            <div class = "image">
+                <img
+                    src="alexmountain.jpg"
+                    alt ="happy_guy"
+                    width="100%"
+                    >
+            </div>
+        </div>
     </div>
     <div class="secret">
         <p>
