--- a/clicker.html
+++ b/clicker.html
@@ -8,13 +8,20 @@
 </head>
 <body>
     <div class="button">
-    <button>click to make a doodad</button> <br>
+        <button onClick="clickBtn()">click to make a doodad</button> <br>
     </div>
     <div class="button">
-    <a href="index.html"><button>go back</button></a>
+        <a href="index.html"><button>go back</button></a>
     </div>
-    <p>
-        amount collected =
-    </p>
+    <p id="doodadCounter">amount collected = 0</p>
+
+    <script>
+        var doodad = 0;
+
+        function clickBtn() {
+            doodad += 1;
+            document.getElementById("doodadCounter").innerHTML = "amount collected = " + doodad;
+        }
+    </script>
 </body>
 </html>
