--- a/clicker.html
+++ b/clicker.html
@@ -11,16 +11,27 @@
         <button onClick="clickBtn()">click to make a doodad</button> <br>
     </div>
     <div class="button">
+        <button onClick="buy()">click to buy a doodadbuilding</button> <br>
+    </div>
+    <div class="button">
         <a href="index.html"><button>go back</button></a>
     </div>
     <p id="doodadCounter">amount collected = 0</p>
-
+    <p id="buildingCounter">amount collected = 0</p>
     <script>
         var doodad = 0;
-
+        var building = 0;
         function clickBtn() {
             doodad += 1;
             document.getElementById("doodadCounter").innerHTML = "amount collected = " + doodad;
+        }
+        function buy() {
+            if(doodad => 100){
+                doodad -= 100;
+                building += 1;
+                document.getElementById("doodadCounter").innerHTML = "amount collected = " + doodad;
+                document.getElementById("buildingCounter").innerHTML = "building collected = " + building;
+            }
         }
     </script>
 </body>
