--- a/clicker.html
+++ b/clicker.html
@@ -20,7 +20,7 @@
     <p id="buildingCounter">amount collected = 0</p>
     <script>
         var doodad = 0;
-        var building = 0;
+        var building = 1;
         function clickBtn() {
             doodad += 1;
             document.getElementById("doodadCounter").innerHTML = "amount collected = " + doodad;
@@ -33,6 +33,12 @@
                 document.getElementById("buildingCounter").innerHTML = "building collected = " + building;
             }
         }
+        
+        setInterval(() => {
+        doodad += building
+        document.getElementById("doodadCounter").innerHTML = "amount collected = " + doodad;
+        document.getElementById("buildingCounter").innerHTML = "building collected = " + building;
+        }, 1000);
     </script>
 </body>
 </html>
