--- a/clicker.html
+++ b/clicker.html
@@ -6,39 +6,23 @@
     <title>Clicker</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <div class="button">
         <button onClick="clickBtn()">click to make a doodad</button> <br>
     </div>
     <div class="button">
-        <button onClick="buybuilding()">click to buy a doodadbuilding</button> <br>
+        <button onClick="buybuilding()" id="buildingbutton">first doodadbuilding is FREE!</button> <br>
+    </div>
+    <div class="button">
+        <button onClick="buyclickpower()" id="clickbutton">first Click is FREE!</button> <br>
     </div>
     <div class="button">
         <a href="index.html"><button>go back</button></a>
     </div>
     <p id="doodadCounter">amount collected = 0</p>
     <p id="buildingCounter">amount collected = 0</p>
-    <script>
-        var doodad = 0;
-        var building = 0;
-        function clickBtn() {
-            doodad += 1;
-            document.getElementById("doodadCounter").innerHTML = "amount collected = " + doodad;
-        }
-        function buybuilding() {
-            if(doodad => 100){
-                doodad -= 100;
-                building += 1;
-                document.getElementById("doodadCounter").innerHTML = "amount collected = " + doodad;
-                document.getElementById("buildingCounter").innerHTML = "building collected = " + building;
-            }
-        }
-        
-        setInterval(() => {
-        doodad += building
-        document.getElementById("doodadCounter").innerHTML = "amount collected = " + doodad;
-        document.getElementById("buildingCounter").innerHTML = "building collected = " + building;
-        }, 1000);
-    </script>
+    <p id="clickpowerCounter">amount collected = 0</p>
+    <script src="doodadclicker.js"></script>
 </body>
 </html>
