--- a/index.html
+++ b/index.html
@@ -48,13 +48,14 @@
                     >
             </div>
         </div>
+
         <div class = "post">
             <div class="header">
                 i played a game
             </div>
             <div class = "text">
                 <p>
-                    it was oh so epic 
+                    it was oh so epic seb made clicker game <a href="clicker.html"><button>little game</button></a>
                 </p>
             </div>
             <div class = "image">
