new stuff making work on mobile

--- a/clicker.html
+++ b/clicker.html
@@ -12,10 +12,13 @@
         <button onClick="clickBtn()">click to make a doodad</button> <br>
     </div>
     <div class="button">
-        <button onClick="buybuilding()" id="buildingbutton">first doodadbuilding is FREE!</button> <br>
+        <button onClick="buybuilding()" id="buildingbutton">first doodadbuilding is $100!</button> <br>
     </div>
     <div class="button">
-        <button onClick="buyclickpower()" id="clickbutton">first Click is FREE!</button> <br>
+        <button onClick="buyclickpower()" id="clickbutton">first Click is $50</button> <br>
+    </div>
+    <div class="button">
+        <button onClick="buypirates()" id="piratesbutton">first pirates is $400</button> <br>
     </div>
     <div class="button">
         <a href="index.html"><button>go back</button></a>
@@ -23,6 +26,7 @@
     <p id="doodadCounter">amount collected = 0</p>
     <p id="buildingCounter">amount collected = 0</p>
     <p id="clickpowerCounter">amount collected = 0</p>
+    <p id="pirateCounter">amount collected = 0</p>
     <script src="doodadclicker.js"></script>
 </body>
 </html>
