--- a/index.html
+++ b/index.html
@@ -66,10 +66,20 @@
                     >
             </div>
         </div>
+        <div class = "post">
+            <div class="header">
+                HELLO!
+            </div>
+            <div class = "text">
+                <p>
+                    It's a me! Alex! I hacked BigD's website manual mode :sunglasses: Anyway click this button ->> <a href="https://alex1sn.itch.io"><button>See more of my awesomness</button></a>
+                </p>
+            </div>
+        </div>
     </div>
     <div class="secret">
         <p>
-             P.S. also visit my <a href="https://sayhell0.itch.io/"> <U>itch.io page!!</U></a> and try out my clicker game
+             P.S. also visit my <a href="https://alex1sn.itch.io/"> <U>itch.io page!!</U></a> and try out my clicker game
         </p>
         <a href="clicker.html"><button>little game</button></a>
     </div>
