--- a/clicker.html
+++ b/clicker.html
@@ -24,9 +24,9 @@
         <a href="index.html"><button>go back</button></a>
     </div>
     <p id="doodadCounter">amount collected = 0</p>
-    <p id="buildingCounter">amount collected = 0</p>
-    <p id="clickpowerCounter">amount collected = 0</p>
-    <p id="pirateCounter">amount collected = 0</p>
+    <p id="buildingCounter">buildings collected = 0</p>
+    <p id="clickpowerCounter">clickpower collected = 0</p>
+    <p id="pirateCounter">ships sailing = 0</p>
     <script src="doodadclicker.js"></script>
 </body>
 </html>
