update making it work

--- a/clicker.html
+++ b/clicker.html
@@ -15,7 +15,7 @@
         <button onClick="buybuilding()" id="buildingbutton">first doodadbuilding is $100!</button> <br>
     </div>
     <div class="button">
-        <button onClick="buyclickpower()" id="clickbutton">first Click is $50</button> <br>
+        <button onClick="buyclickpower()" id="clickpowerbutton">first Click is $50</button> <br>
     </div>
     <div class="button">
         <button onClick="buypirates()" id="piratesbutton">first pirates is $400</button> <br>
@@ -26,7 +26,7 @@
     <p id="doodadCounter">amount collected = 0</p>
     <p id="buildingCounter">buildings collected = 0</p>
     <p id="clickpowerCounter">clickpower collected = 0</p>
-    <p id="pirateCounter">ships sailing = 0</p>
+    <p id="piratesCounter">ships sailing = 0</p>
     <script src="doodadclicker.js"></script>
 </body>
 </html>
