--- a/clicker.html
+++ b/clicker.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
+<body onload="onReady()">
     <div class="button">
         <button onClick="clickBtn()">click to make a doodad</button> <br>
     </div>
