--- a/clicker.html
+++ b/clicker.html
@@ -21,12 +21,16 @@
         <button onClick="buypirates()" id="piratesbutton">first pirates is $400</button> <br>
     </div>
     <div class="button">
+        <button onClick="buyminions()" id="minionsbutton">first minion is $10</button> <br>
+    </div>
+    <div class="button">
         <a href="index.html"><button>go back</button></a>
     </div>
     <p id="doodadCounter">amount collected = 0</p>
     <p id="buildingCounter">buildings collected = 0</p>
     <p id="clickpowerCounter">clickpower collected = 0</p>
     <p id="piratesCounter">ships sailing = 0</p>
+    <p id="minionsCounter">minions scheming = 0</p>
     <script src="doodadclicker.js"></script>
 </body>
 </html>
