--- a/index.html
+++ b/index.html
@@ -66,6 +66,19 @@
                     >
             </div>
         </div>
+        <div class = "post">
+            <div class="header">
+                check out my friends documentary
+            </div>
+            <div class = "text">
+                <p>
+                    she made a documentary about stuff
+                </p>
+            </div>
+            <div class="image">
+                <video src="docu.mp4" width="100%" controls></video>
+            </div>
+        </div>
     </div>
     <div class="secret">
         <p>
