--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=1000, initial-scale=1.0">
     <title>my EPIC WEBSITE!!</title>
     <link rel="stylesheet" href="style.css">
     </head>
@@ -26,7 +26,7 @@
                 <img
                     src="steamhappy.jpg"
                     alt ="happy_guy"
-                    width="100%"
+                    width= 400
                     >
             </div>
         </div>
@@ -44,7 +44,7 @@
                 <img
                     src="bluehappy.jpg"
                     alt ="happy_guy"
-                    width="100%"
+                    width= 400
                     >
             </div>
         </div>
@@ -62,7 +62,7 @@
                 <img
                     src="alexmountain.jpg"
                     alt ="happy_guy"
-                    width="100%"
+                    width= 400
                     >
             </div>
         </div>
@@ -76,7 +76,10 @@
                 </p>
             </div>
             <div class="image">
-                <video src="docu.mp4" width="100%" controls></video>
+                <video
+                    src="docu.mp4"
+                    width= 400
+                    controls></video>
             </div>
         </div>
     </div>
