--- a/index.html
+++ b/index.html
@@ -12,6 +12,24 @@
                 <strong>Welcome to my webpage</strong> 
             </h1>
         </div>
+    </div>
+        <div class = "post">
+            <div class="header">
+                Check out My Game
+            </div>
+            <div class = "text">
+                <p>
+                    <u>I made a game please download it</u> i spent a little while on it and its awesome <br>
+                    <strong><a href="https://sayhell0.itch.io/"> <U>itch.io page!!</U></strong><br>
+                </p>
+            </div>
+            <div class = "image">
+                <img
+                    src="steamhappy.jpg"
+                    alt ="happy_guy"
+                    width= 400
+                    >
+            </div>
         <div class = "post">
             <div class="header">
                 awesome blog post
