--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
                     width= 400
                     >
             </div>
+        </div>
         <div class = "post">
             <div class="header">
                 awesome blog post
