--- a/index.html
+++ b/index.html
@@ -13,14 +13,15 @@
             </h1>
         </div>
     </div>
+
         <div class = "post">
             <div class="header">
-                Check out My Game
+                awesome blog post
             </div>
             <div class = "text">
                 <p>
-                    <u>I made a game please download it</u> i spent a little while on it and its awesome <br>
-                    <strong><a href="https://sayhell0.itch.io/"> <U>itch.io page!!</U></strong><br>
+                    <u>HELLO GUYS!!!</u> welcome to my website <br>
+                    <strong>please rate highly and leave a like</strong><br>
                 </p>
             </div>
             <div class = "image">
@@ -30,6 +31,8 @@
                     width= 400
                     >
             </div>
+        </div>
+    
         <div class = "post">
             <div class="header">
                 awesome blog post
