--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html>
+ <html>
     <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=0.9">
@@ -15,12 +15,13 @@
 
         <div class = "post">
             <div class="header">
-                awesome blog post
+                Check Out My Game
             </div>
             <div class = "text">
                 <p>
-                    <u>HELLO GUYS!!!</u> welcome to my website <br>
-                    <strong>please rate highly and leave a like</strong><br>
+                    <u>Hello please check out my awesome game</u> you can shoot things <br>
+                    <strong>you can also do other stuff like upgrading your guy</strong><br>
+                    <a href="https://sayhell0.itch.io/"> <U>click on this link to see it</U></a><br>
                 </p>
             </div>
             <div class = "image">
