--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             </div>
             <div class = "text">
                 <p>
-                    <u>Hello please check out my awesome game</u> you can shoot things <br>
+                    <u>Hello please check out my awesome game</u> you can shoot<br>
                     <strong>you can also do other stuff like upgrading your guy</strong><br>
                     <a href="https://sayhell0.itch.io/"> <U>click on this link to see it</U></a><br>
                 </p>
