--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
     </div>
     <div class="secret">
         <p>
-             P.S. also visit my <a href="https://sayhell0.itch.io/"> <U>itch.io page!!</U></a> and try out my clicker game
+             P.S. also visit my <a href="http://sayhell0.itch.io/"> <U>itch.io page!!</U></a> and try out my clicker game
         </p>
         <a href="clicker.html"><button>little game</button></a>
     </div>
