more in detail description
tough

--- a/index.html
+++ b/index.html
@@ -21,10 +21,14 @@
             <div class = "text">
                 <p>
                     this was my first solo game, i made it over the course of<br>
-                    two weeks. i used godot to make the game it has a wide<br>
+                    two weeks. i used godot to make the game it, i chose godot<br>
+                    because its an incredibly strong and easy to pickup engine<br>
+                    esspecially for me as i already have alot of experience in <br>
+                    writing python code. the game has a wide<br>
                     range of mechanics from the basic shooting all the up to<br>
                     an advanced roguelike system with diffrent raritys and<br>
-                    chances<br>
+                    chances, i coded all of these systems by myself without any<br>
+                    assistance from a tutorial<br>
                     <br>
                     <a href="https://sayhell0.itch.io/"> <U>You can play the game here</U></a><br>
                 </p>
